--- a/src/main/webapp/main_style.css
+++ b/src/main/webapp/main_style.css
@@ -265,3 +265,37 @@ img {
 .gwt-verticalPanelMarginTop {
 	margin-top: 10px;
 }
+
+.gwt-FilterPanel {
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.gwt-FilterLabel {
+	margin-top: 15px;
+	margin-bottom: 5px;
+	color: #1A1A1A;
+	font-family: 'Segoe UI', Tahoma, Helvetica, Sans-Serif;
+	font-size: 16px;
+}
+
+.gwt-FilterButtonTable {
+	margin-top: 15px;
+}
+
+.gwt-FilterDedicationTextBox {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.gwt-SettingsPage {
+	/*background-image: url("images/settingspage.png");*/
+	text-align: left;
+}
+
+.gwt-GroupPage {
+	/*background-image: url("images/grouppage.png");*/
+	text-align: left;
+}
